--- a/What the Hack/public/mix-manifest.json
+++ b/What the Hack/public/mix-manifest.json
@@ -1,5 +1,8 @@
 {
     "/js/app.js": "/js/app.js",
+    "/css/font-awesome.css": "/css/font-awesome.css",
     "/css/app.css": "/css/app.css",
-    "/css/app1.css": "/css/app1.css"
+    "/css/app1.css": "/css/app1.css",
+    "/css/summernote.css": "/css/summernote.css",
+    "/js/summernote.js": "/js/summernote.js"
 }
